---Cleaning Update Part 1---

--- a/Emby/Properties/Settings.settings
+++ b/Emby/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="Token" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">MjMzMzQ0NTIwMzEyMzI0MDk2.CtcI2Q.Jw4aGM1_dvkAwdrlKl25k5bsKAE</Value>
+      <Value Profile="(Default)">MzA1MzYzMDg2MzgxMDIzMjMy.C90HDg.QQOxNtIteHFNhTBcxKCXJmSGtL4</Value>
     </Setting>
   </Settings>
 </SettingsFile>
